# AuthServiceFlask-template

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
auth/: app.py  models.py
auth/blueprints/: auth.py  cli.py  user.py
auth/helpers/: auth_helpers.py  messages.py  redis.py  serialization_schemas.py  user_blueprint_helpers.py  user_request_form_schemas.py
auth/migrations/versions/: 7983670aee31_initial_migration.py
auth/settings/: config.py  extensions.py
auth/static/: swagger-schema.yaml
